# Continuum-MultiRobot-Estimation

./: CMakeLists.txt  README.md
data/: base_2.csv  fbg_strains_1.csv  fbg_strains_2.csv
include/: continuum_robot_state_estimator.h  utilities.h  visualizervtk.h
src/: continuum_robot_state_estimator.cpp  utilities.cpp  visualizervtk.cpp
src/examples/: 1_continuum_robot.cpp  2_parallel_continuum_robot.cpp  3_continuous_stewart_gough.cpp  4_collaborative_continuum_robots.cpp  5_fbg_measurements.cpp  example_1.cpp  example_2.cpp
